--- a/security01/w01/build.gradle
+++ b/security01/w01/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    //Spring Security
+    implementation "org.springframework.boot:spring-boot-starter-security"
 }
 
 tasks.named('test') {
