--- a/security01/w01/src/main/resources/application.properties
+++ b/security01/w01/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=${SPRING_APP_NAME:w01}
+spring.security.user.name=${SECURITY_USERNAME:root}
+spring.security.user.password=${SECURITY_PASSWORD:12345}
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
