--- a/security01/w04/src/main/resources/application.properties
+++ b/security01/w04/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=w04
+spring.security.user.name=${SECURITY_USERNAME:root}
+spring.security.user.password=${SECURITY_PASSWORD:12345}
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
 
-
-#spring.security.user.name=${SECURITY_USERNAME:root}
-#spring.security.user.password=${SECURITY_PASSWORD:12345}
 logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
